<resources>
    <!--    Get Started Activity-->
    <string name="app_name">EasyStock</string>
    <string name="deskripsi_get_started">Cari bahan bakumu\nlebih mudah!</string>
    <string name="get_started">Get Started</string>
    <!--    Login Activity-->
    <string name="email">\ Email</string>
    <string name="password">\ Password</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar_akun">Daftar</string>
    <!--    Register Activity-->
    <string name="deskripsi_register">Buatlah Akunmu\ndan Mulai Mencari Produk!</string>
    <string name="no_telp">\ No Telepon</string>
    <string name="username">\ Username</string>
    <string name="confirm_password">\ Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="masuk_dengan">\ Atau Masuk dengan\ </string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
</resources>